--- a/index.html
+++ b/index.html
@@ -3,69 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <title>Spirit - Natural Skincare</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <!-- Header Section -->
+    <header class="header">
+        <div class="logo">Spirit</div> <!-- Logo: Use your brand's logo here -->
+        <nav class="navigation">
+            <a href="#">Home</a>
+            <a href="#">Shop</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a> <!-- Navigation: Link to key pages -->
+        </nav>
+        <button class="cta-button">Shop Now</button> <!-- CTA: Direct users to the shop -->
+    </header>
 
-        <!-- Header -->
-        <header class="header">
-            <div class="logo">Logo</div>
-            <nav class="navigation">
-                <a href="#">Home</a>
-                <a href="#">Products</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-            </nav>
-            <button class="cta-button">Buy Now</button>
-        </header>
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Discover the Power of Natural Skincare</h1> <!-- Main Heading: Brief powerful message -->
+        <h2>Crafted with care, designed for your skin</h2> <!-- Subheading: Supportive statement -->
+        <button class="cta-button">Explore Our Products</button> <!-- CTA: Encourage exploration -->
+    </section>
 
-        <!-- Hero Section -->
-        <section class="hero">
-            <h1>Main Heading</h1>
-            <h2>Subheading</h2>
-            <button class="cta-button">Shop Now</button>
-        </section>
+    <!-- Products Section -->
+    <section class="products">
+        <div class="product">
+            <img src="product1.jpg" alt="Antirheumatic Cream">
+            <h3>Antirheumatic Cream</h3> <!-- Product Name: Display the product's name -->
+            <p>Relieve joint and muscle pain naturally with our handcrafted formula.</p> <!-- Product Description: Briefly describe the product -->
+            <span class="price">$29.99</span> <!-- Price: Display the product's price -->
+            <button class="cta-button">Add to Cart</button> <!-- Add to Cart Button -->
+        </div>
+        <!-- Additional products: Repeat product blocks as needed -->
+    </section>
 
-        <!-- Product Section -->
-        <section class="product-section">
-            <div class="product">
-                <img src="product.jpg" alt="Product Image">
-                <h3>Product Title</h3>
-                <p>Product Description</p>
-                <span class="price">$99.99</span>
-                <button class="cta-button">Add to Cart</button>
-            </div>
-        </section>
+    <!-- Testimonials Section -->
+    <section class="testimonials">
+        <div class="testimonial">
+            <p>"This cream changed my life! No more joint pain!"</p> <!-- Testimonial: Insert customer feedback -->
+            <span>Jane Doe</span> <!-- Author: Customer's name -->
+        </div>
+        <!-- Additional testimonials: Add more testimonial blocks -->
+    </section>
 
-        <!-- Testimonials Section -->
-        <section class="testimonials">
-            <div class="testimonial">
-                <p>Quote text from customer.</p>
-                <span>Customer Name</span>
-            </div>
-        </section>
-
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="logo">Logo</div>
-            <nav class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Contact</a>
-            </nav>
-            <div class="social-media-icons">
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">Twitter</a>
-            </div>
-            <div class="newsletter">
-                <input type="email" placeholder="Your email">
-                <button class="cta-button">Subscribe</button>
-            </div>
-        </footer>
-
-    </div>
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="logo">Spirit</div> <!-- Footer Logo: Same or simplified version of the header logo -->
+        <nav class="footer-links">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">Contact</a> <!-- Footer Links: Legal and contact information -->
+        </nav>
+        <div class="social-media-icons">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a> <!-- Social Media: Link to your social media pages -->
+        </div>
+        <div class="newsletter">
+            <input type="email" placeholder="Your email">
+            <button class="cta-button">Subscribe</button> <!-- Newsletter: Collect user emails -->
+        </div>
+    </footer>
 </body>
 </html>
