--- a/index.html
+++ b/index.html
@@ -9,60 +9,80 @@
 <body>
     <!-- Header Section -->
     <header class="header">
-        <div class="logo">Spirit</div> <!-- Logo: Use your brand's logo here -->
+        <div class="logo">Spirit</div>
         <nav class="navigation">
             <a href="#">Home</a>
             <a href="#">Shop</a>
             <a href="#">About</a>
-            <a href="#">Contact</a> <!-- Navigation: Link to key pages -->
+            <a href="#">Contact</a>
         </nav>
-        <button class="cta-button">Shop Now</button> <!-- CTA: Direct users to the shop -->
+        <button class="cta-button">Shop Now</button>
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>Discover the Power of Natural Skincare</h1> <!-- Main Heading: Brief powerful message -->
-        <h2>Crafted with care, designed for your skin</h2> <!-- Subheading: Supportive statement -->
-        <button class="cta-button">Explore Our Products</button> <!-- CTA: Encourage exploration -->
+        <h1>Discover the Power of Natural Skincare</h1>
+        <h2>Crafted with care, designed for your skin</h2>
+        <button class="cta-button">Explore Our Products</button>
     </section>
 
     <!-- Products Section -->
     <section class="products">
         <div class="product">
             <img src="product1.jpg" alt="Antirheumatic Cream">
-            <h3>Antirheumatic Cream</h3> <!-- Product Name: Display the product's name -->
-            <p>Relieve joint and muscle pain naturally with our handcrafted formula.</p> <!-- Product Description: Briefly describe the product -->
-            <span class="price">$29.99</span> <!-- Price: Display the product's price -->
-            <button class="cta-button">Add to Cart</button> <!-- Add to Cart Button -->
+            <h3>Antirheumatic Cream</h3>
+            <p>Relieve joint and muscle pain naturally with our handcrafted formula.</p>
+            <span class="price">$29.99</span>
+            <button class="cta-button">Add to Cart</button>
         </div>
-        <!-- Additional products: Repeat product blocks as needed -->
+        <div class="product">
+            <img src="product2.jpg" alt="Hydrating Cream">
+            <h3>Hydrating Cream</h3>
+            <p>Nourish and hydrate your skin with our rich, luxurious cream.</p>
+            <span class="price">$24.99</span>
+            <button class="cta-button">Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="product3.jpg" alt="Regenerative Cream">
+            <h3>Regenerative Cream</h3>
+            <p>Revitalize your skin with our regenerative formula, perfect for all skin types.</p>
+            <span class="price">$34.99</span>
+            <button class="cta-button">Add to Cart</button>
+        </div>
     </section>
 
     <!-- Testimonials Section -->
     <section class="testimonials">
         <div class="testimonial">
-            <p>"This cream changed my life! No more joint pain!"</p> <!-- Testimonial: Insert customer feedback -->
-            <span>Jane Doe</span> <!-- Author: Customer's name -->
+            <p>"This cream changed my life! My skin feels softer and healthier."</p>
+            <span>Jane Doe</span>
         </div>
-        <!-- Additional testimonials: Add more testimonial blocks -->
+        <div class="testimonial">
+            <p>"I've tried many products, but nothing works as well as Spirit's natural creams."</p>
+            <span>John Smith</span>
+        </div>
+        <div class="testimonial">
+            <p>"Amazing results! My skin has never looked better."</p>
+            <span>Sarah Lee</span>
+        </div>
     </section>
 
     <!-- Footer Section -->
     <footer class="footer">
-        <div class="logo">Spirit</div> <!-- Footer Logo: Same or simplified version of the header logo -->
+        <div class="logo">Spirit</div>
         <nav class="footer-links">
             <a href="#">Privacy Policy</a>
             <a href="#">Terms of Service</a>
-            <a href="#">Contact</a> <!-- Footer Links: Legal and contact information -->
+            <a href="#">Contact</a>
         </nav>
         <div class="social-media-icons">
             <a href="#">Facebook</a>
             <a href="#">Instagram</a>
-            <a href="#">Twitter</a> <!-- Social Media: Link to your social media pages -->
+            <a href="#">Twitter</a>
         </div>
         <div class="newsletter">
             <input type="email" placeholder="Your email">
-            <button class="cta-button">Subscribe</button> <!-- Newsletter: Collect user emails -->
+            <button class="cta-button">Subscribe</button>
         </div>
     </footer>
 </body>
