--- a/index.html
+++ b/index.html
@@ -11,79 +11,29 @@
     <header class="header">
         <div class="logo">Spirit</div>
         <nav class="navigation">
-            <a href="#">Home</a>
+            <a href="#">About Us</a>
             <a href="#">Shop</a>
-            <a href="#">About</a>
             <a href="#">Contact</a>
         </nav>
-        <button class="cta-button">Shop Now</button>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Discover the Power of Natural Skincare</h1>
-        <h2>Crafted with care, designed for your skin</h2>
-        <button class="cta-button">Explore Our Products</button>
-    </section>
-
-    <!-- Products Section -->
-    <section class="products">
-        <div class="product">
-            <img src="product1.jpg" alt="Antirheumatic Cream">
-            <h3>Antirheumatic Cream</h3>
-            <p>Relieve joint and muscle pain naturally with our handcrafted formula.</p>
-            <span class="price">$29.99</span>
-            <button class="cta-button">Add to Cart</button>
+    <!-- Product Showcase Section -->
+    <section class="showcase">
+        <div class="product-selector">
+            <img src="product1.jpg" alt="Regenerative Cream" class="product-thumb" data-color="#66bb6a" data-title="Regenerative Cream" data-description="Revitalize your skin with our regenerative formula, perfect for all skin types." data-price="$34.99">
+            <img src="product2.jpg" alt="Hydrating Cream" class="product-thumb" data-color="#42a5f5" data-title="Hydrating Cream" data-description="Nourish and hydrate your skin with our rich, luxurious cream." data-price="$24.99">
+            <img src="product3.jpg" alt="Antirheumatic Cream" class="product-thumb" data-color="#ffa726" data-title="Antirheumatic Cream" data-description="Relieve joint and muscle pain naturally with our handcrafted formula." data-price="$29.99">
+            <img src="product4.jpg" alt="Nourishing Cream" class="product-thumb" data-color="#ab47bc" data-title="Nourishing Cream" data-description="Deeply nourish and rejuvenate your skin with our premium blend." data-price="$39.99">
         </div>
-        <div class="product">
-            <img src="product2.jpg" alt="Hydrating Cream">
-            <h3>Hydrating Cream</h3>
-            <p>Nourish and hydrate your skin with our rich, luxurious cream.</p>
-            <span class="price">$24.99</span>
-            <button class="cta-button">Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="product3.jpg" alt="Regenerative Cream">
-            <h3>Regenerative Cream</h3>
-            <p>Revitalize your skin with our regenerative formula, perfect for all skin types.</p>
-            <span class="price">$34.99</span>
-            <button class="cta-button">Add to Cart</button>
+        <div class="product-display">
+            <img src="product1-large.jpg" alt="Regenerative Cream" class="product-image">
+            <div class="product-info">
+                <h2 class="product-title">Regenerative Cream</h2>
+                <p class="product-description">Revitalize your skin with our regenerative formula, perfect for all skin types.</p>
+                <span class="product-price">$34.99</span>
+                <button class="cta-button">Add to Cart</button>
+            </div>
         </div>
     </section>
-
-    <!-- Testimonials Section -->
-    <section class="testimonials">
-        <div class="testimonial">
-            <p>"This cream changed my life! My skin feels softer and healthier."</p>
-            <span>Jane Doe</span>
-        </div>
-        <div class="testimonial">
-            <p>"I've tried many products, but nothing works as well as Spirit's natural creams."</p>
-            <span>John Smith</span>
-        </div>
-        <div class="testimonial">
-            <p>"Amazing results! My skin has never looked better."</p>
-            <span>Sarah Lee</span>
-        </div>
-    </section>
-
-    <!-- Footer Section -->
-    <footer class="footer">
-        <div class="logo">Spirit</div>
-        <nav class="footer-links">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-            <a href="#">Contact</a>
-        </nav>
-        <div class="social-media-icons">
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#">Twitter</a>
-        </div>
-        <div class="newsletter">
-            <input type="email" placeholder="Your email">
-            <button class="cta-button">Subscribe</button>
-        </div>
-    </footer>
 </body>
 </html>
