--- a/index.html
+++ b/index.html
@@ -3,37 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spirit - Natural Skincare</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <title>Footer Example</title>
 </head>
 <body>
-    <!-- Header Section -->
-    <header class="header">
-        <div class="logo">Spirit</div>
-        <nav class="navigation">
-            <a href="#">About Us</a>
-            <a href="#">Shop</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
-
-    <!-- Product Showcase Section -->
-    <section class="showcase">
-        <div class="product-selector">
-            <img src="product1.jpg" alt="Regenerative Cream" class="product-thumb" data-color="#66bb6a" data-title="Regenerative Cream" data-description="Revitalize your skin with our regenerative formula, perfect for all skin types." data-price="$34.99">
-            <img src="product2.jpg" alt="Hydrating Cream" class="product-thumb" data-color="#42a5f5" data-title="Hydrating Cream" data-description="Nourish and hydrate your skin with our rich, luxurious cream." data-price="$24.99">
-            <img src="product3.jpg" alt="Antirheumatic Cream" class="product-thumb" data-color="#ffa726" data-title="Antirheumatic Cream" data-description="Relieve joint and muscle pain naturally with our handcrafted formula." data-price="$29.99">
-            <img src="product4.jpg" alt="Nourishing Cream" class="product-thumb" data-color="#ab47bc" data-title="Nourishing Cream" data-description="Deeply nourish and rejuvenate your skin with our premium blend." data-price="$39.99">
-        </div>
-        <div class="product-display">
-            <img src="product1-large.jpg" alt="Regenerative Cream" class="product-image">
-            <div class="product-info">
-                <h2 class="product-title">Regenerative Cream</h2>
-                <p class="product-description">Revitalize your skin with our regenerative formula, perfect for all skin types.</p>
-                <span class="product-price">$34.99</span>
-                <button class="cta-button">Add to Cart</button>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-logo">Spirit Handmade</div>
+            <nav class="footer-links">
+                <a href="#">O nama</a>
+                <a href="#">Proizvodi</a>
+                <a href="#">Kontakt</a>
+            </nav>
+            <div class="footer-social-media">
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">Twitter</a>
+            </div>
+            <div class="footer-newsletter">
+                <input type="email" placeholder="Vaš email">
+                <button class="subscribe-button">Prijavi se</button>
             </div>
         </div>
-    </section>
+    </footer>
 </body>
 </html>
