--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Header -->
     <header class="header">
-        <div class="container">
+        <div class="container header__container">
             <div class="logo">
                 <h1>Spirit Handmade</h1>
             </div>
@@ -23,20 +23,20 @@
                 </ul>
             </nav>
             <div class="search">
-                <input type="text" placeholder="Search">
+                <input type="text" placeholder="Pretraga">
             </div>
         </div>
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="container hero-container">
-            <div class="hero-text">
+        <div class="container hero__container">
+            <div class="hero__text">
                 <h2>Tvoja nega kože</h2>
                 <p>Naša biljna kozmetika pruža dubinsku negu i zaštitu, pomažući tvojoj koži da ostane zdrava i mladolika.</p>
-                <a href="#products" class="btn">Pogledaj ponudu</a>
+                <a href="#products" class="btn btn--primary">Pogledaj ponudu</a>
             </div>
-            <div class="hero-image">
+            <div class="hero__image">
                 <img src="images/hero-image.jpg" alt="Prirodne kreme">
             </div>
         </div>
@@ -44,47 +44,59 @@
 
     <!-- Products Section -->
     <section id="products" class="products">
-        <div class="container">
-            <h2>Regenerativna</h2>
-            <p>Podstiče regeneraciju kože, čini je glatkom, nahranjenom i podmlađenom.</p>
-            <div class="product-gallery">
-                <div class="product-item">
-                    <img src="images/regenerativna.jpg" alt="Regenerativna krema">
-                    <p>Regenerativna</p>
+        <div class="container products__container">
+            <div class="carousel">
+                <div class="carousel__item active" data-cream="regenerativna">
+                    <div class="products__text">
+                        <h2>Regenerativna</h2>
+                        <p>Podstiče regeneraciju kože, čini je glatkom, nahranjenom i podmlađenom.</p>
+                        <button class="btn btn--secondary">DODAJ U KORPU</button>
+                    </div>
+                    <div class="products__image">
+                        <img src="images/regenerativna.jpg" alt="Regenerativna krema">
+                    </div>
                 </div>
-                <div class="product-item">
-                    <img src="images/cokoladna.jpg" alt="Čokoladna krema">
-                    <p>Čokoladna</p>
+                <!-- Ponoviti za ostale kreme -->
+                <div class="carousel__item" data-cream="hidratantna">
+                    <div class="products__text">
+                        <h2>Hidratantna</h2>
+                        <p>Održava hidrataciju kože, čineći je mekom i elastičnom.</p>
+                        <button class="btn btn--secondary">DODAJ U KORPU</button>
+                    </div>
+                    <div class="products__image">
+                        <img src="images/hidratantna.jpg" alt="Hidratantna krema">
+                    </div>
                 </div>
-                <div class="product-item">
-                    <img src="images/hidratantna.jpg" alt="Hidratantna krema">
-                    <p>Hidratantna</p>
-                </div>
-                <div class="product-item">
-                    <img src="images/antireumatska.jpg" alt="Antireumatska krema">
-                    <p>Antireumatska</p>
-                </div>
+                <!-- Dodajte još carousel__item divove za svaku kremu -->
             </div>
-            <button class="btn">DODAJ U KORPU</button>
+            <div class="carousel__controls">
+                <button class="carousel__control carousel__control--prev">&#10094;</button>
+                <button class="carousel__control carousel__control--next">&#10095;</button>
+            </div>
+            <div class="carousel__indicators">
+                <span class="carousel__indicator active" data-cream="regenerativna"></span>
+                <span class="carousel__indicator" data-cream="hidratantna"></span>
+                <!-- Dodajte još indikatora za svaku kremu -->
+            </div>
         </div>
     </section>
 
-    <!-- Social Approval Section -->
+    <!-- Social Proof Section -->
     <section class="social-proof">
         <div class="container">
             <h2>Šta kažu naši kupci</h2>
             <div class="testimonials">
                 <div class="testimonial">
                     <p>"Ova krema je promenila moju kožu! Nikad nisam imala tako mekanu i sjajnu kožu."</p>
-                    <p>- Jelena P.</p>
+                    <p><strong>- Jelena P.</strong></p>
                 </div>
                 <div class="testimonial">
                     <p>"Prirodni sastojci zaista čine razliku. Preporučujem svima!"</p>
-                    <p>- Marko S.</p>
+                    <p><strong>- Marko S.</strong></p>
                 </div>
                 <div class="testimonial">
                     <p>"Najbolja nega kože koju sam ikada probala. Hvala Spirit Handmade!"</p>
-                    <p>- Ana M.</p>
+                    <p><strong>- Ana M.</strong></p>
                 </div>
             </div>
         </div>
@@ -92,13 +104,13 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container footer-container">
-            <div class="footer-logo-contact">
+        <div class="container footer__container">
+            <div class="footer__logo-contact">
                 <h3>Spirit Handmade</h3>
                 <p>+381 63 331 737</p>
                 <p>spirit@lift.agency</p>
             </div>
-            <div class="footer-links">
+            <div class="footer__links">
                 <h4>Brzi linkovi</h4>
                 <ul>
                     <li><a href="#about">O nama</a></li>
@@ -107,7 +119,7 @@
                     <li><a href="https://www.tiktok.com">TikTok</a></li>
                 </ul>
             </div>
-            <div class="footer-subscribe">
+            <div class="footer__subscribe">
                 <h4>Subscribe</h4>
                 <p>Obaveštenja o akcijama</p>
                 <form>
@@ -116,8 +128,8 @@
                 </form>
             </div>
         </div>
-        <div class="footer-bottom">
-            <p>© 2024 Spirit Handmade. All rights reserved</p>
+        <div class="footer__bottom">
+            <p>© 2024 Spirit Handmade. Sva prava zadržana.</p>
             <p>Prirodni proizvodi</p>
         </div>
     </footer>
